--- a/project-4/css/style.css
+++ b/project-4/css/style.css
@@ -16,7 +16,7 @@ body {
   text-align: center;
   overflow: auto;
   padding: 3px ;
-  margin: 2%, 2% ;}
+  margin: 2px 2px ;}
 
 .box1 {
   background: DarkGreen ;
