--- a/project-4/css/style.css
+++ b/project-4/css/style.css
@@ -39,7 +39,8 @@ body {
   background-color: DarkGreen;
 }
 
-@media (min-width: 770px) {
-
+@media (min-width: 800px) {
+  .box3{width: 70%}
+  .box4{width: 30%}
 
 }
