--- a/project-4/css/style.css
+++ b/project-4/css/style.css
@@ -8,7 +8,7 @@ body {
 .container{
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;}
+  }
 
 .a:link {color: white;}
 .a:visited {color:red:}
