--- a/project-4/css/style.css
+++ b/project-4/css/style.css
@@ -18,7 +18,7 @@ body {
   text-align: center;
   overflow: auto;
   padding: 3px ;
-  margin: 5px 5px ;}
+  margin: 5px ;}
 
 .box1 {
   background-color:  DarkGreen ;
