--- a/project-4/css/style.css
+++ b/project-4/css/style.css
@@ -5,11 +5,10 @@
   text-align: center;
 }
 
-.container {
-    display: flex ;
-    flex-wrap: wrap ;
-}
-.box {display:flex ;flex-wrap: wrap ;}
+.container { display: flex;
+    flex-wrap: wrap ;}
+
+
 .a:link {color: white;}
 .a:visited {color:red:}
 
@@ -17,8 +16,8 @@
   width: 100%;
   text-align: center;
   overflow: auto;
-  padding: 3px ;
-  margin: 5px ;}
+  padding: 1% ;
+  margin: 3px ;}
 
 .box1 {
   background-color:  DarkGreen ;
@@ -43,5 +42,12 @@
 
   .box3{width: 70%}
   .box4{width: 30%}
+
+}
+
+@@media (min-width: 1000px) {
+  .box2 {width: 30%}
+  .box3 {width: 50%}
+  .box4 {width: 20%}
 
 }
