--- a/project-4/css/style.css
+++ b/project-4/css/style.css
@@ -45,7 +45,7 @@
 
 }
 
-@@media (min-width: 1000px) {
+@media (min-width: 1000px) {
   .box2 {width: 30%}
   .box3 {width: 50%}
   .box4 {width: 20%}
